vendor/cvlr/cvlr-derive/tests/expand/test_nondet_union.stderr
error: proc-macro derive panicked
 --> tests/expand/test_nondet_union.rs:3:10
  |
3 | #[derive(Nondet)]
  |          ^^^^^^
  |
  = help: message: not yet implemented: Union not supported yet
