vendor/cvlr/cvlr-derive/tests/expand/test_nondet_union.rs
use cvlr_derive::Nondet;

#[derive(Nondet)]
union MyUnion {
    f1: u32,
    f2: i32,
}

fn main() {}
